Added randomization functions

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				testGrid.forAll(addCell);
 			};
 
-			var testGrid = new DataGrid(5,5,"blue");
+			var testGrid = new DataGrid(5,5,["red","blue"]);
 			
 			setInterval(drawGrid, 500);
 		</script>
