fixed typo with cloneFromRect

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 				return value;
 			}
 
-			var testGrid = new DataGrid(20,20,["red","blue"],true,true);
+			var testGrid = new DataGrid(20,20,["red","blue","green"],true,true);
 			
-			setInterval(drawGrid, 500);
+			drawCycle = setInterval(drawGrid, 500);
 		</script>
 	</body>
 </html>
