--- a/index.html
+++ b/index.html
@@ -12,18 +12,29 @@
 
 			function addCell(color){
 				var newCell = document.createElement("div");
-				newCell.className = "cell " + color
+				newCell.className = "cell " + color;
 				grid.appendChild(newCell);
 				return color;
 			};
 
-			function drawGrid(){
-				grid.setAttribute("style","max-width: "+(testGrid.width)*20+"px;")
+			function setCell(color){
+				grid.children[cellcounter].className = "cell " + color;
+				cellcounter++;
+				return color;
+			}
+
+			function buildGrid(){
+				grid.setAttribute("style","width: "+(testGrid.width)*20+"px;")
 				while (grid.hasChildNodes()) {
 				    grid.removeChild(grid.lastChild);
 				}
 				testGrid.forAll(addCell);
 			};
+
+			function drawGrid(){
+				cellcounter = 0;
+				testGrid.forAll(setCell);
+			}
 
 			function testCallback(value){
 				if (value == "red"){
@@ -32,9 +43,15 @@
 				return value;
 			}
 
-			var testGrid = new DataGrid(20,20,["red","blue","green"],true,true);
+			function lifeCycle(){
+				testGrid.runLifeAll("blue","white");
+				drawGrid();
+			}
+
+			var testGrid = new DataGrid(30,30,["white","blue"],true,true);
+			buildGrid();
 			
-			drawCycle = setInterval(drawGrid, 500);
+			drawCycle = setInterval(lifeCycle, 100);
 		</script>
 	</body>
 </html>
