--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				testGrid.smoothAll(forestGroup1,forestRules2);
 			}
 
-			var testGrid = new DataGrid(30,30,["grass","green","green"],true,true);
+			var testGrid = new DataGrid(30,30,["grass","green","green","green"],true,true);
 			buildGrid();
 			//smoothGrid();
 			
