--- a/index.html
+++ b/index.html
@@ -29,11 +29,18 @@
 				    grid.removeChild(grid.lastChild);
 				}
 				testGrid.forAll(addCell);
+				gridWidth = testGrid.width;
+				gridHeight = testGrid.height;
+
 			};
 
 			function drawGrid(){
 				cellcounter = 0;
-				testGrid.forAll(setCell);
+				if (testGrid.width != gridWidth || testGrid.height != gridHeight){
+					buildGrid();
+				} else {
+					testGrid.forAll(setCell);
+				}
 			}
 
 			function testCallback(value){
@@ -86,7 +93,7 @@
 				testGrid.smoothAll(forestGroup1,forestRules2);
 			}
 
-			var testGrid = new DataGrid(30,30,["grass","green","green","green"],true,true);
+			var testGrid = new DataGrid(10,20,["grass","green","green","green"],true,true);
 			buildGrid();
 			//smoothGrid();
 			
