Added map generator test, caught bug in expand Mask

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 			}
 
 			function randomTriangle(value){
-				var points  = [randomPoint(),randomPoint(),randomPoint()]
+				var points  = [randomPoint(),randomPoint(),randomPoint()];
 				testGrid.fillPolygon(points,value);
 				return points.toString();
 			}
